--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -2,15 +2,24 @@
 
 .nav-container{
     display: flex;
+    position: sticky;
+    top: 0px;
     flex-direction: row;
     justify-content: space-between;
+    height: 2em;
+    margin: 0;
+    margin-bottom: 1em;
+    padding: 1em;
+    /* border: 1px solid black; */
+    background-color: #457EAC;
+    box-shadow: 0 8px rgba(0, 0, 0, .2);
 }
 
 .button-menu-container {
     display: flex;
     flex-direction: column;
     align-items: flex-end;
-    padding: 1em;
+    /* padding: 1em; */
 }
 
 .profile-dropdown {
@@ -20,6 +29,7 @@
     text-align: end;
     padding: .5em;
     border: 1px solid black;
+    background-color: white;
     height: 4em;
     /* transition: margin-top .25s; */
 }
