--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,3 +3,13 @@
 ul {
     list-style: none;
 }
+
+h1, h2, h3, h4, h5, h6, a, ol, li, ul, div, span,
+body, header, nav {
+  color: inherit;
+  background-color: transparent;
+  margin: 0;
+  padding: 0;
+  outline: 0;
+  font-weight: normal;
+}
