--- a/frontend/src/components/TagButtons/tag-button.css
+++ b/frontend/src/components/TagButtons/tag-button.css
@@ -1,10 +1,42 @@
 .tag-button__outer {
     display: flex;
     flex-direction: column;
+    align-items: center;
     width: 20em;
     margin: 1em;
     padding: 1em;
     /* border-style: ; */
     border: 1em solid #341706;
     background-color: #aa4404;
+}
+
+.tag-button__inner {
+    margin: .5em;
+}
+
+.tag-button__inner button{
+    padding: 1em;
+    background-color: #7B3E19;
+    color: white;
+    border: none;
+    border-style: outset;
+    border-color: black;
+    box-shadow: 5px 5px 5px 5px rgb(0, 0, 0, .2);
+    /* transition: padding-top .25s ease;
+    transition: border .1s ease; */
+}
+
+.tag-button__inner button:hover {
+    padding-top: 1.25em;
+    cursor: pointer;
+}
+
+.tag-button__inner button:active {
+    position: relative;
+    border: 4px ridge #883a0a;
+    top: 3px;
+}
+
+.tag-button__inner button:focus {
+    outline: none;
 }
