--- a/frontend/src/components/Questions/questions.css
+++ b/frontend/src/components/Questions/questions.css
@@ -15,6 +15,8 @@
     background-color: #7B3E19;
     transition: all .1s ease;
     margin-top: 1em;
+    text-decoration: none;
+    text-align: center;
 }
 
 .questions-contents {
@@ -29,11 +31,19 @@
 
 .questions-contents:hover {
     padding-top: 1.25em;
-    
 }
 
 .all-questions a:active {
     position: relative;
     border: 4px ridge #883a0a;
     top: 3px;
+}
+
+.questions-contents h2 {
+    margin-bottom: .5em;
+}
+
+.all-questions-h3 {
+    font-size: 2em;
+    font-weight: bold;
 }
