--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,11 @@
 /* TODO Add site wide styles */
 
+@import url('https://fonts.googleapis.com/css2?family=Lora&display=swap');
+
+body{
+  font-family: 'Lora', serif;
+}
+
 ul {
     list-style: none;
 }
