--- a/frontend/src/components/TagButtons/tag-button.css
+++ b/frontend/src/components/TagButtons/tag-button.css
@@ -22,12 +22,12 @@
     border-style: outset;
     border-color: black;
     box-shadow: 5px 5px 5px 5px rgb(0, 0, 0, .2);
-    /* transition: padding-top .25s ease;
-    transition: border .1s ease; */
+    transition: padding .25s ease;
+    /* transition: border .1s ease; */
 }
 
 .tag-button__inner button:hover {
-    padding-top: 1.25em;
+    padding: 1.25em;
     cursor: pointer;
 }
 
